# vellum

./: .gitignore  pyproject.toml
assets/: extract_images.py
src/vellum/: main.py
src/vellum/documents/: __init__.py  images.py  store.py
src/vellum/llm/: __init__.py  chat.py  embeddings.py  models.py
src/vellum/utils/: images.py
