[project]
name = "vellum"
version = "0.1.0"
description = ""
authors = [
    {name = "enwask",email = "enwask@ucf.edu"}
]
readme = "readme.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "huggingface-hub (>=0.33.2,<0.34.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)"
]

[tool.poetry]
packages = [{include = "vellum", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
