[project]
name = "vellum"
version = "0.1.0"
description = ""
authors = [
    {name = "enwask",email = "enwask@ucf.edu"}
]
readme = "readme.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "colpali-engine @ git+https://github.com/illuin-tech/colpali.git",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)"
]

[tool.poetry]
packages = [{include = "vellum", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
